namespace.yml
apiVersion: apps/v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    name: wordpress
