mariadb-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
  namespace: wordpress
  labels:
    app: db
spec: # specification for deployment resource
  replicas: 1 # how many replicas of pods we want to create
  selector:
    matchLabels:
      app: db
  template: # blueprint for pods
    metadata:
      labels:
        app: db # service will look for this label
    spec: # specification for Pods
      containers:
      - name: mariadb
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/dw-repo/mariadb:10.6.4-focal
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mariadb-pv
            mountPath: /var/lib/mysql
      imagePullSecrets:
      - name: awsregcred
      volumes:
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: mariadb-pvc
