wordpress-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-sts
  namespace: wordpress
  labels:
    app: wordpress
spec: # specification for deployment resource
  replicas: 2
  selector:
    matchLabels:
     app: wordpress
  template: # blueprint for Pod
    metadata:
      labels:
        app: wordpress
    spec: # specification for Pod
      containers:
      - name: wordpress
        image:  992382545251.dkr.ecr.us-east-1.amazonaws.com/dw-repo/wordpress:latest
        ports:
        - containerPort: 80
          name: wordpress-sts
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      imagePullSecrets:
      - name: awsregcred
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
