mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: mariadb-svc
   namespace: wordpress
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
